--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ body{
 
 
 .navbar ul.nav-item {
-    float: right;
     list-style: none;
     display:inline-block;
     margin-top:-20px;
@@ -56,79 +55,81 @@ body{
 
 
 .header{
+    margin-top: 50px;
     background-color: #e2e2e2;
-    box-shadow: 0 0 10px black;
-}
-.header h1{
-    margin-top: 200px;
+   
 }
 
 
 .head-text{
     display: inline-block;
-    width: 25%;
-    margin: 0 0 0 170px;
-    font-size: 20px;
+    width: 40%;
     text-shadow: 7px 10px  rgb(201, 201, 201);
-    vertical-align: top;
+    text-align: center;
+    vertical-align: top; 
+    padding:7% 0 5% 0;
+
 }
 
 .head-img{
     display: inline-block;
-    width: 40%;
-    margin: 0 0 0 100px;
+    width: 50%;
+    margin-left: 9%;
 }
 .img1{
     display: inline-block;
     width: 800px;
-    margin-top: 50px;
+    margin-top: 0px;
 
 }
 
 
 
 .border {
-    margin: 100px;
+    margin: 8%;
     border: 3px solid black;
     box-shadow: 0 0 20px black;
 }
 
 .content1{
-    margin: 50px 0 50px 0px;
+    margin: 50px;
     background-color: #cfcccc;
 
 }
 
 .picme{
-    width: 250px;
+    width: 70%;
     box-shadow: 5px 5px 10px black;
     border-radius: 50%;
-    margin: 30px 0 0 100px;
-    display: inline-block;
+    margin:  0 0 10%;
+    
 
 }
-
-.con1-text{
-    float: right;
+.con1-img{
     display: inline-block;
-    margin-top: -250px;
-    margin-right: 200px;
+    width: 30%;
+
+}
+.con1-text{
+    display: inline-block;
+    width: 60%;
+    
+
 }
 
 .con1-text h1{
-    font-size: 50px;
+
     text-shadow: 7px 5px 1px rgb(155, 153, 153);
 }
 
 .con1-text p{
-    font-size: 30px;
     text-shadow: 7px 3px 1px rgb(155, 153, 153);
     margin: -0 0 0 70px;
 }
 
 .left{
     margin-left: 150px;
-    margin-bottom;: 100px;
+    margin-bottom: 100px;
     text-align: left;
     width: 40%;
     display: inline-block;
