--- a/css/style.css
+++ b/css/style.css
@@ -89,10 +89,12 @@ body{
     margin: 8%;
     border: 3px solid black;
     box-shadow: 0 0 20px black;
+    background-color: white;
+    
 }
 
 .content1{
-    margin: 50px;
+    margin: 5%;
     background-color: #cfcccc;
 
 }
@@ -101,7 +103,7 @@ body{
     width: 70%;
     box-shadow: 5px 5px 10px black;
     border-radius: 50%;
-    margin:  0 0 10%;
+    margin:  5% 0 5% 5%;
     
 
 }
@@ -113,6 +115,7 @@ body{
 .con1-text{
     display: inline-block;
     width: 60%;
+    text-align: center;
     
 
 }
@@ -124,32 +127,30 @@ body{
 
 .con1-text p{
     text-shadow: 7px 3px 1px rgb(155, 153, 153);
-    margin: -0 0 0 70px;
+
 }
 
 .left{
-    margin-left: 150px;
+    margin-left: 10%;
     margin-bottom: 100px;
     text-align: left;
     width: 40%;
     display: inline-block;
     vertical-align: top;
+    
 
 }
 
 .right{
-    margin-left: 50px;
+    margin-left: 5%;
     display: inline-block;
     width: 40%;
     text-align: left;
     padding-bottom: 100px;
+ 
 }
 
 
-.content2 {
-    font-size:20px ;
-    
-}
 
 .content2 h2{
     text-shadow:2px 3px 1px rgb(155, 153, 153);
@@ -157,16 +158,19 @@ body{
 }
 
 .content2 p{
-    font-size: 25px;
+
+    margin-left:50px ;
+    text-shadow:0 2px 3px rgb(155, 153, 153);
+
+
+}
+
+.content2 ul{
     margin-left:50px ;
     text-shadow:0 2px 3px rgb(155, 153, 153);
 
 }
 
-
-.content3 {
-    font-size:20px ;
-}
 
 .content3 h2{
     text-shadow:2px 3px 1px rgb(155, 153, 153);
@@ -174,13 +178,13 @@ body{
 }
 
 .content3 p {
-    font-size: 25px;
+
     margin-left:50px ;
     text-shadow:0 2px 3px rgb(155, 153, 153);
 
 }
 .content3 li {
-    font-size: 25px;
+
     margin-left:50px ;
     text-shadow:0 2px 3px rgb(155, 153, 153);
 
@@ -190,7 +194,15 @@ body{
 
 
 
-
+.addBtn{
+    background-color:rgb(52, 68, 46);
+    color:white;
+  }
+  
+  .deBtn{
+    background-color:rgb(177, 74, 56);
+    color:white;
+  }
 
 
 
